--- a/static/css/adminfaculty.css
+++ b/static/css/adminfaculty.css
@@ -207,3 +207,21 @@
     cursor: pointer;
     margin-right: 10px;
 }
+@media only screen and (max-width: 375px) {
+
+}
+@media only screen and (min-width: 376px) and (max-width: 480px) {
+
+}
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+
+}
+@media only screen and (min-width: 769px) and (max-width: 979px) {
+
+}
+@media only screen and (min-width: 980px) and (max-width: 1024px){
+
+}
+@media only screen and (min-width: 1025px) and (max-width: 1399px){
+    
+}
