--- a/static/css/facultystyles.css
+++ b/static/css/facultystyles.css
@@ -213,6 +213,7 @@ textarea {
 .dark-mode textarea{
     background:#0f111a;
     border: 1px solid #373e53;
+    color: #fff;
 }
 .form-group input:focus,.form-group textarea:focus {
     outline: none;
@@ -297,4 +298,22 @@ textarea {
 }
 .dark-mode .commentfield{
     color: #fff;
+}
+@media only screen and (max-width: 375px) {
+
+}
+@media only screen and (min-width: 376px) and (max-width: 480px) {
+
+}
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+
+}
+@media only screen and (min-width: 769px) and (max-width: 979px) {
+
+}
+@media only screen and (min-width: 980px) and (max-width: 1024px){
+
+}
+@media only screen and (min-width: 1025px) and (max-width: 1399px){
+    
 }
