--- a/queryraiserapp/templates/adminpage.html
+++ b/queryraiserapp/templates/adminpage.html
@@ -143,17 +143,14 @@
                             <rect x="3" y="11" width="18" height="10" rx="2" ry="2" />
                             <path d="M7 11V7a5 5 0 0 1 10 0v4" />
                           </svg>Closed Complaints</a></li>
-                          <li class="nav-item"><a class="nav-link" href="{% url 'admintechnician' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                            <rect x="3" y="11" width="18" height="10" rx="2" ry="2" />
-                            <path d="M7 11V7a5 5 0 0 1 9.9-2" /> 
-                            <path d="M17 11h3" />
-                          </svg>Reopened Complaints</a></li>
+                          
                     </ul>
                 </li>
-                <li><a class="nav-link" href="{% url 'adminassigntechnician' %}" style="font-weight: 100;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-person-add" viewBox="0 0 16 16">
-                    <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"/>
-                    <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"/>
-                  </svg>Assign Technician</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{% url 'adminupdatestatuspage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 48 48">
+                    <circle cx="24" cy="24" r="20" fill="none" stroke="#e0e0e0" stroke-width="4"/>
+                    <circle cx="24" cy="24" r="20" fill="none" stroke="#4caf50" stroke-width="4"
+                            stroke-dasharray="125.66" stroke-dashoffset="31.42"/>
+                  </svg>Update Status</a></li>
                 <li><a class="nav-link" href="{% url 'adminpage' %}" style="font-weight: 100;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-app-indicator" viewBox="0 0 16 16">
                     <path d="M5.5 2A3.5 3.5 0 0 0 2 5.5v5A3.5 3.5 0 0 0 5.5 14h5a3.5 3.5 0 0 0 3.5-3.5V8a.5.5 0 0 1 1 0v2.5a4.5 4.5 0 0 1-4.5 4.5h-5A4.5 4.5 0 0 1 1 10.5v-5A4.5 4.5 0 0 1 5.5 1H8a.5.5 0 0 1 0 1z"/>
                     <path d="M16 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
@@ -232,10 +229,6 @@
                             <input type="text" name="departmentname" id="departmentname" placeholder="Department Name" required>
                         </div>
                         <div id="form-row">
-                            <label for="departmentcode">Department Code : </label>
-                            <input type="text" name="departmentcode" id="departmentcode" placeholder="Department Code" required>
-                        </div>
-                        <div id="form-row">
                             <label for="departmentimage">Department Logo : </label>
                             <input type="file" name="departmentimage" id="departmentimage">
                         </div>
@@ -254,8 +247,6 @@
                             <tr>
                                 <th>Logo</th>
                                 <th>Department</th>
-                                <th>Code</th>
-                                
                                 <th></th>
                                 <th></th> 
                             </tr>
@@ -324,9 +315,7 @@ navLinks.forEach(link => {
                 const row = document.createElement('tr');
                 row.innerHTML = `
                     <td >${department.logo ? `<img src="${department.logo}" alt="${department.name} Logo" height="50" >` : 'N/A'}</td>
-                    <td style="color:#3874ff;" contenteditable="true" style="max-width:150px;" id="department_name_${department.code}">${department.name}</td>
-                    <td id="department_code_${department.code}">${department.code}</td>
-                    
+                    <td style="color:#3874ff;" contenteditable="true" style="max-width:150px;" id="department_name_${department.code}">${department.name}</td>       
                     <td><button onclick="saveChanges('${department.code}')" class="save-button">
                         
                         Save</button></td>
@@ -370,7 +359,7 @@ navLinks.forEach(link => {
             if (data.success) {
                 alert('Department added successfully.');
                 form.reset();
-                document.querySelector('.overlay').classList.remove('active');
+                document.querySelector('.deaparment-overlay').classList.remove('active');
                 getdepartments();
             } else {
                 alert('Failed to add department: ' + data.error);
