--- a/queryraiserapp/templates/subadminfaculty.html
+++ b/queryraiserapp/templates/subadminfaculty.html
@@ -155,6 +155,11 @@
                     <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"/>
                     <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"/>
                   </svg>Assign Technician</a></li>
+                  <li class="nav-item"><a class="nav-link" href="{% url 'adminupdatestatuspage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 48 48">
+                    <circle cx="24" cy="24" r="20" fill="none" stroke="#e0e0e0" stroke-width="4"/>
+                    <circle cx="24" cy="24" r="20" fill="none" stroke="#4caf50" stroke-width="4"
+                            stroke-dasharray="125.66" stroke-dashoffset="31.42"/>
+                  </svg>Update Status</a></li>
                 <li><a class="nav-link" href="{% url 'adminpage' %}" style="font-weight: 100;"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-app-indicator" viewBox="0 0 16 16">
                     <path d="M5.5 2A3.5 3.5 0 0 0 2 5.5v5A3.5 3.5 0 0 0 5.5 14h5a3.5 3.5 0 0 0 3.5-3.5V8a.5.5 0 0 1 1 0v2.5a4.5 4.5 0 0 1-4.5 4.5h-5A4.5 4.5 0 0 1 1 10.5v-5A4.5 4.5 0 0 1 5.5 1H8a.5.5 0 0 1 0 1z"/>
                     <path d="M16 3a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
@@ -241,10 +246,6 @@
                             <input type="text" name="facultyname" id="facultyname" placeholder="Name" required>
                         </div>
                         <div id="form-row">
-                            <label for="registernumber">ID Number</label>
-                            <input type="text" name="registernumber" id="registernumber" placeholder="ID Number" required>
-                        </div>
-                        <div id="form-row">
                             <label for="phone">Phone Number (IN)</label>
                             <input type="tel" id="phone" name="phone" placeholder="98XXXXXXXX" pattern="+?[6-9]\d{9,12}" required>     
                         </div>
@@ -272,9 +273,7 @@
                             <tr>
                                 <th>Faculty</th>
                                 <th>Phone Number</th>
-                                <th>ID Number</th>
                                 <th>Department</th>
-                                <th></th> 
                                 <th></th>
                                 <th></th>
                             </tr>
@@ -377,9 +376,7 @@ navLinks.forEach(link => {
                          </td>
                         
                         <td contenteditable="true" id="faculty_phone_${faculty.facultyid}" style="max-width:150px;font-weight:500">${faculty.phone_number}</td>
-                        <td style="color:#3874ff;">${faculty.facultyid}</td>
                         <td style="color:grey !important;font-weight:100 !important;">${faculty.departmentname}</td>
-                        <td><button class="save-button" onclick="savefacultyChanges('${faculty.facultyid}')">Save</button></td> 
                         <td><button class="delete-button" onclick="deleteDepartment('${faculty.facultyid}')" style="display:flex;align-items:center;gap:3px;">
                             <svg style="margin-right: 3px;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" class="h-5 w-5 shrink-0">
                             <path fill="currentColor" fill-rule="evenodd" d="M10.556 4a1 1 0 0 0-.97.751l-.292 1.14h5.421l-.293-1.14A1 1 0 0 0 13.453 4zm6.224 1.892-.421-1.639A3 3 0 0 0 13.453 2h-2.897A3 3 0 0 0 7.65 4.253l-.421 1.639H4a1 1 0 1 0 0 2h.1l1.215 11.425A3 3 0 0 0 8.3 22H15.7a3 3 0 0 0 2.984-2.683l1.214-11.425H20a1 1 0 1 0 0-2zm1.108 2H6.112l1.192 11.214A1 1 0 0 0 8.3 20H15.7a1 1 0 0 0 .995-.894zM10 10a1 1 0 0 1 1 1v5a1 1 0 1 1-2 0v-5a1 1 0 0 1 1-1m4 0a1 1 0 0 1 1 1v5a1 1 0 1 1-2 0v-5a1 1 0 0 1 1-1" clip-rule="evenodd"></path>
@@ -389,7 +386,7 @@ navLinks.forEach(link => {
                                 <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2z"/>
                                 <path d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466"/>
                                 </svg>
-                                Reset</button></td>
+                                Reset Password</button></td>
                     `;
                     facultyTableBody.appendChild(row);
                 });
