--- a/queryraiserapp/templates/technicianupdatestatus.html
+++ b/queryraiserapp/templates/technicianupdatestatus.html
@@ -82,10 +82,10 @@
                             <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m1.679-4.493-1.335 2.226a.75.75 0 0 1-1.174.144l-.774-.773a.5.5 0 0 1 .708-.708l.547.548 1.17-1.951a.5.5 0 1 1 .858.514M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"/>
                             <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"/>
                           </svg>Assigned Complaints</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="{% url 'technicianupdatepage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-clipboard-plus" viewBox="0 0 16 16">
-                            <path fill-rule="evenodd" d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7"/>
-                            <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1z"/>
-                            <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0z"/>
+                        <li class="nav-item"><a class="nav-link active" href="{% url 'technicianupdatepage' %}"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 48 48">
+                            <circle cx="24" cy="24" r="20" fill="none" stroke="#e0e0e0" stroke-width="4"/>
+                            <circle cx="24" cy="24" r="20" fill="none" stroke="#4caf50" stroke-width="4"
+                                    stroke-dasharray="125.66" stroke-dashoffset="31.42"/>
                           </svg>Update Status</a></li>
                     </ul>
                 </li>
@@ -195,7 +195,7 @@
             updatecompliantTableBody.innerHTML = ''; 
             if(data.length===0){
                 const row = document.createElement('tr');
-                row.innerHTML = '<td colspan="8">No assigned complaints found right now.</td>';
+                row.innerHTML = '<td colspan="9">No assigned complaints found right now.</td>';
                 updatecompliantTableBody.appendChild(row);
             } else {
                 data.forEach(complaint => {
