--- a/static/css/admintechnician.css
+++ b/static/css/admintechnician.css
@@ -154,3 +154,21 @@ form {
 .delete-button svg {
     margin-right: 5px;
 }
+@media only screen and (max-width: 375px) {
+
+}
+@media only screen and (min-width: 376px) and (max-width: 480px) {
+
+}
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+
+}
+@media only screen and (min-width: 769px) and (max-width: 979px) {
+
+}
+@media only screen and (min-width: 980px) and (max-width: 1024px){
+
+}
+@media only screen and (min-width: 1025px) and (max-width: 1399px){
+    
+}
