--- a/static/css/pannelstyles.css
+++ b/static/css/pannelstyles.css
@@ -617,3 +617,21 @@ select:focus{
     width: 30px;
     height: 30px;
 }
+@media only screen and (max-width: 375px) {
+
+}
+@media only screen and (min-width: 376px) and (max-width: 480px) {
+
+}
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+
+}
+@media only screen and (min-width: 769px) and (max-width: 979px) {
+
+}
+@media only screen and (min-width: 980px) and (max-width: 1024px){
+
+}
+@media only screen and (min-width: 1025px) and (max-width: 1399px){
+    
+}
