--- a/static/css/technicianstyles.css
+++ b/static/css/technicianstyles.css
@@ -205,3 +205,21 @@
 .dark-mode .commentfield{
     color: #fff;
 }
+@media only screen and (max-width: 375px) {
+
+}
+@media only screen and (min-width: 376px) and (max-width: 480px) {
+
+}
+@media only screen and (min-width: 481px) and (max-width: 768px) {
+
+}
+@media only screen and (min-width: 769px) and (max-width: 979px) {
+
+}
+@media only screen and (min-width: 980px) and (max-width: 1024px){
+
+}
+@media only screen and (min-width: 1025px) and (max-width: 1399px){
+    
+}
